# BDFAgent

./: .gitignore  README.md  agent.py  agent_depre.py  bdf_parser.py  command1.tcl  command2.tcl  command3.tcl  function_call.py  llm_setup.yaml  main.py  main_LC.py  main_depre.py  nastran.msg  pyproject.toml  test.py
BDFAgent/: agent.py  agent_Lc.py  bdf_parser.py
CAEAgent/: agent.py  bdf_parser.py  hm_operators.py  hyperworks_operator.py  mesh_operators.py  nastran_runner.py  tools.py
TCL/: import_bdf.tcl
hwreport/hwreport-2025-04-15-08-49-41/.rtemp/: ArdWordLayout.xml
test_cases/: CRM_V12wingbox_COARSE_1.bdf  CRM_V12wingbox_COARSE_1.hw  cbush.msh  cbush_test.op2
test_cases/cbush/: test_cbush.py
test_cases/wingbox/: CRM_V12wingbox_COARSE_1.bdf  crm_v12wingbox_coarse_1.DBALL  crm_v12wingbox_coarse_1.MASTER  crm_v12wingbox_coarse_1.f04  crm_v12wingbox_coarse_1.f06  test_nastran.py
