[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["CAEAgent"]  # Explicitly specify your main package

[tool.setuptools.package-dir]
CAEAgent = "CAEAgent"   # Map package name to directory

[project]
name = "CAEAgent"
version = "0.1.0"
description = "A CAE oriented LLM agent"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "numpy",
    "pyNastran",
    "langchain",
    "langchain_core",
    "langchain_community",
    "langchain_openai"
]
